--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "test4",
-    "version": "0.1.0",
-    "description": "My Superb Vue Project",
+    "name": "electron-manage",
+    "version": "0.2.0",
+    "description": "A Electron & Vue.js application for file manage",
     "main": "main.js",
     "scripts": {
         "clean": "rimraf dist",
