1，预览优化 2，新增设置模态弹窗（进行中） 3，bug修复
Signed-off-by: 404-NF <1126669661@qq.com>

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "electron-manage",
-    "version": "0.2.0",
+    "version": "0.2.4",
     "description": "A Electron & Vue.js application for file manage",
     "main": "main.js",
     "scripts": {
         "clean": "rimraf dist",
-        "package": "electron-packager ./ electron-manage --win --out electron-manage --version=1.3.14 --overwrite --ignore node_modules",
+        "package": "electron-packager ./ electron-manage --win --out electron-manage --electron-version --overwrite --ignore node_modules",
         "build": "npm run clean && webpack --config build/webpack.prod.js",
         "dev": "node build/server.js",
         "app": "cross-env NODE_ENV=development electron ."
