1，调整了部分样式bug 2, 新增了loading 3，新增了删除提示
Signed-off-by: 404-NF <1126669661@qq.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "electron-manage",
-    "version": "0.2.5",
+    "version": "0.2.6",
     "description": "A Electron & Vue.js application for file manage",
     "main": "main.js",
     "scripts": {
@@ -10,7 +10,7 @@
         "dev": "node build/server.js",
         "app": "cross-env NODE_ENV=development electron ."
     },
-    "author": "404",
+    "author": "404-NF",
     "license": "MIT",
     "dependencies": {
         "babel-runtime": "^6.23.0",
